[package]
name = "fuzion-kujira-keiko"
version = "0.2.0"
authors = ["Fuzion <hello@fuzion.app>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-storage = "1.5.2"
cosmwasm-schema = "1.5.5"
cosmwasm-std = { version = "1.5.5", features = ["cosmwasm_1_2"] }
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw20 = "1.1.2"
cw-utils = "1.0.3"
fuzion-flows = "0.8.1"
fuzion-utilities = "0.8.3"
kujira = "1.0.2"
kujira-std = "1.0.1"
kujira-fin = "1.0.0"
kujira-bow = "1.0.0"
kujira-orca = "1.0.0"
kujira-pilot = "1.0.1"
schemars = "0.8.16"
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.57" }

[dev-dependencies]
cw-multi-test = "0.18.1"
kujira-orca-queue = { path = "./orca-queue/contracts/queue", package = "orca-queue" }
kujira-std = "1.0.1"
kujira-fin = "1.0.0"
kujira-bow = "1.0.0"
kujira-rs-testing = "1.6.0"
kujira-pilot-testing = { path = "./pilot", package = "fuzion-kujira-pilot" }
kujira-orca = "1.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
